--- a/_data/blog/2020-11-17-not-again.md
+++ b/_data/blog/2020-11-17-not-again.md
@@ -1,7 +1,7 @@
 ---
 template: BlogPost
 path: /yeppers
-tags: '"dics", "pot", "sex"'
+tags: ["dics", "pot", "sex"]
 date: 2020-11-17T17:28:42.498Z
 title: Not again
 metaDescription: unfortunately
